selfhost/test/typechecker/typeidentifier/error_modalias_name_not_type.out
Error at %FILE_NAME%:3:10
Unknown type 'A'
  |  val _: e.A[] = []
              ^
No type with that name is visible in current scope
